# llama-stack-sandbox

./: .env.sample  .gitignore  README.md  README_EVALUATION.md  compare_results.py  deepeval_dashboard.py  evaluate.py  evaluate.sh  evaluation_metrics.py  evaluation_utils.py  generate_run_yaml.py  llama_stack_wrapper.py  lsd.sh  open_dashboard.sh  playground.sh  pyproject.toml  requirements.txt  run.sh  run_evaluation.sh  visualize.sh  visualize_results.py
configs/: sample_evaluation_config.yaml
docs/: LyFin-Compliance-Annex.md  LysFin-Compliance.md
evaluate/: __init__.py  __main__.py  config.py  evaluator.py  examples.py  loader.py  metrics.py  wrapper.py
run/: __init__.py  __main__.py  config.py  yaml_generator.py
scratch/: compatibility-full.csv  compatibility.csv
templates/: run.yaml.template
visualize/: __init__.py  __main__.py  dashboard.py  results.py
